--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "package.json",
       "use": "@vercel/node"
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -12,7 +16,39 @@
       "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "^/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "^/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "^/manifest.json",
+      "dest": "/manifest.json"
+    },
+    {
+      "src": "^/asset-manifest.json",
+      "dest": "/asset-manifest.json"
+    },
+    {
+      "src": "^/(.*).png",
+      "dest": "/$1.png"
+    },
+    {
+      "src": "^/(.*).js",
+      "dest": "/$1.js"
+    },
+    {
+      "src": "^/(.*).json",
+      "dest": "/$1.json"
+    },
+    {
+      "src": "^/(.*).css",
+      "dest": "/$1.css"
+    },
+    {
+      "src": "^/(.*)",
       "dest": "/index.html"
     }
   ],
