--- a/vercel.json
+++ b/vercel.json
@@ -1,55 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "^/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "^/favicon.ico",
-      "dest": "/favicon.ico"
-    },
-    {
-      "src": "^/manifest.json",
-      "dest": "/manifest.json"
-    },
-    {
-      "src": "^/asset-manifest.json",
-      "dest": "/asset-manifest.json"
-    },
-    {
-      "src": "^/(.*).png",
-      "dest": "/$1.png"
-    },
-    {
-      "src": "^/(.*).js",
-      "dest": "/$1.js"
-    },
-    {
-      "src": "^/(.*).json",
-      "dest": "/$1.json"
-    },
-    {
-      "src": "^/(.*).css",
-      "dest": "/$1.css"
-    },
-    {
-      "src": "^/(.*)",
-      "dest": "/index.html"
+  "buildCommand": "./vercel-build.sh",
+  "outputDirectory": "build",
+  "framework": "create-react-app",
+  "rewrites": [
+    { 
+      "source": "/api/(.*)", 
+      "destination": "/api/$1" 
     }
   ],
   "env": {
