--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # Copy this file to .env.local, .env.development, or .env.production and modify as needed
 
 # API URL - Set this to your backend API address
+# For production, use: https://santacruzservice.fly.dev/api
 REACT_APP_API_URL=https://your-backend.example.com/api
 
 # Set to 'true' to use mock data if no backend is available
